[package]
name = "research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = {path = "/home/Research/egg-main"}
libc = "0.2.150"
bimap = "0.6.0"
factorial = "0.4.0"
regex = "1.5"
lazy_static = "1.4.0"
num-bigint = "0.4"
num-traits = "0.2"